--- a/sass/styles.css
+++ b/sass/styles.css
@@ -682,7 +682,7 @@ button, .button {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    width: 87%;
+    width: 75%;
     position: absolute;
     top: 3.4rem;
   }
@@ -709,7 +709,7 @@ button, .button {
   display: block;
   content: "";
   height: 1px;
-  width: 88%;
+  width: 75%;
   background-color: #95a9c6;
   margin: 1.6rem auto 1.6rem auto;
   opacity: 0.45;
@@ -735,7 +735,7 @@ button, .button {
     margin-right: auto;
     position: relative;
     top: -84px;
-    width: 88%;
+    width: 75%;
   }
 }
 
